# SEDplusplus

./: .gitignore  CMakeLists.txt  PHASE2.md  PHASE2_SPECTRA.md  PHASE3.md  PLAN.md  README.md  SPEEDUP.md
configs/: 3431631727942970240.json  648029239761019776.json  872072016870129024.json
scripts/: build_local.sh  bulk_fit.py  bulk_plot.py  bulk_tui.py  plot_sed.py  sed_local.py
src/: astrometry.cpp  astrometry.hpp  catalog_registry.cpp  catalog_registry.hpp  catalog_table.inc  config.cpp  config.hpp  extinction.cpp  extinction.hpp  f19_table.inc  fastext.cpp  fastmath.hpp  fitfun.cpp  fitfun.hpp  fitsio_util.cpp  fitsio_util.hpp  fitsout.cpp  fitsout.hpp  fitter.cpp  fitter.hpp  http.cpp  http.hpp  magflux.cpp  magflux.hpp  maggrid.cpp  maggrid.hpp  main.cpp  modelgrid.cpp  modelgrid.hpp  passbands.cpp  passbands.hpp  photometry_table.cpp  photometry_table.hpp  qtest.cpp  query.cpp  query.hpp  reddening.cpp  reddening.hpp  results.cpp  results.hpp  (+19 more)
validation/: compare.py  compare_fit_txt.py  compare_fits.py
validation/ref_3431631727942970240/: SED_results.fits  header.sl  photometry.sl  photometry_fit.txt  photometry_fit_mag.txt  photometry_results.tex  photometry_results.txt  photometry_results_run1.txt  photometry_results_stellar_c1.txt  photometry_results_stellar_c1_run1.txt
validation/ref_648029239761019776/: SED_results.fits  header.sl  photometry.sl  photometry_fit.txt  photometry_fit_col.txt  photometry_fit_mag.txt  photometry_results.tex  photometry_results.txt  photometry_results_run1.txt  photometry_results_stellar_c1.txt  photometry_results_stellar_c1_run1.txt
validation/ref_872072016870129024/: SED_results.fits  header.sl  photometry.sl  photometry_fit.txt  photometry_fit_mag.txt  photometry_results.tex  photometry_results.txt  photometry_results_run1.txt  photometry_results_stellar_c1.txt  photometry_results_stellar_c1_run1.txt  photometry_results_stellar_c2.txt  photometry_results_stellar_c2_run1.txt
